--- a/src/components/Sidebar/SideBar.css
+++ b/src/components/Sidebar/SideBar.css
@@ -33,6 +33,7 @@
     cursor: pointer;
     transition: background-color 0.3s ease;
     color: white;
+    margin-bottom: 40px;
   }
   
   .sidebar-button:hover {
@@ -40,7 +41,13 @@
   }
   
   .sidebar-icon {
-    margin-left: 10px;
+    width: 25px; /* Adjust the size of the icon image */
+    height: 25px;
+    margin-right: 10px; /* Add spacing between the icon and text */
+  }
+  
+  .sidebar-text {
+    flex: 1; /* Allow the text to expand and fill the remaining space */
   }
   
   sidebar-button span {
